fixed spacing and copy

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ body {
   /* grayed out for some reason */
   scrollbar-gutter: none;
   overflow-y: auto;
-  margin: 0 1rem 7rem 0;
+  margin: 0 0 7rem 0;
 
   button {
     border-radius: 30px;
@@ -117,7 +117,7 @@ body {
 
     h4 {
       grid-area: h4;
-      padding: 4rem 0 0.5rem 0;
+      padding: 3rem 0 0 0;
     }
 
     #locate-me {
